--- a/pcsx2-qt/Debugger/CpuWidget.ui
+++ b/pcsx2-qt/Debugger/CpuWidget.ui
@@ -172,6 +172,13 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QPushButton" name="btnExportFunctions">
+               <property name="text">
+                <string>Export</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
           </layout>
